LUT-32458 : init v8